# Vocaloid-Musiclaw

./: LICENSE  README.en.md  README.md  README.zh-CN.md  config.example.toml  pyproject.toml  requirements.txt
src/musiclaw/: __init__.py  __main__.py  cli.py  collector.py  config.py  gui.py  matcher.py  models.py  pipeline.py  reporter.py  scanner.py
src/musiclaw/llm/: __init__.py  album_resolver.py  page_structurer.py  schemas.py  validators.py
src/musiclaw/sources/: __init__.py  base.py  dizzylab.py  vcpedia.py  vocadb.py
src/musiclaw/tagger/: __init__.py  base.py  flac.py  mp3.py
src/musiclaw/utils/: __init__.py  cache.py  filename.py  html.py  http.py  similarity.py  textnorm.py
