[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musiclaw"
version = "0.1.0"
description = "Metadata extraction and tagging toolkit for VOCALOID and synthetic singing software doujin albums."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "mutagen>=1.47",
  "pydantic>=2.8",
  "rapidfuzz>=3.9",
  "scrapling[fetchers]>=0.4.2",
  "typer>=0.12",
]

[project.optional-dependencies]
gui = [
  "PySide6>=6.7",
]

[project.scripts]
musiclaw = "musiclaw.cli:app"
musiclaw-gui = "musiclaw.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
